--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
 <title>Misc stuff</title>
 <body>
 <a href="fd.html">Factorization Diagrams</a><br>
-Shamelessly stolen from <a href="http://http://www.jasondavies.com/">Jason Davies</a>
+Shamelessly stolen from <a href="http://www.jasondavies.com/">Jason Davies</a>
 </body>
