--- a/fd.html
+++ b/fd.html
@@ -66,7 +66,7 @@ function primeFactors(n) {
     factors.push(f = factor(n));
     n /= f;
   }
-//  factors.reverse();
+  factors.reverse();
   return factors;
 }
 
