--- a/fd.html
+++ b/fd.html
@@ -71,7 +71,7 @@ function primeFactors(n) {
 }
 
 function factor(n) {
-  if (n % 4 === 0) return 4;
+//  if (n % 4 === 0) return 4;
 
   for (var i = 2; i <= n / 2; i++) {
     if (n % i === 0) return i;
