--- a/fd.html
+++ b/fd.html
@@ -71,6 +71,7 @@ function primeFactors(n) {
 }
 
 function factor(n) {
+  if (n % 3 === 0) return 3;
   if (n % 4 === 0) return 4;
   if (n % 6 === 0) return 6;
 
