--- a/fd.html
+++ b/fd.html
@@ -27,7 +27,7 @@ var width = 1 << 7,
     height = 1 << 7;
 
 var svg = d3.select("#vis").selectAll("svg")
-    .data(d3.range(1, (1 << 8) + 1))
+    .data(d3.range(1, (1 << 7) + 1))
   .enter().append("svg")
     .attr("width", width)
     .attr("height", height);
@@ -56,7 +56,9 @@ function diagram(selection, factors, size) {
           return "translate(0," + δy + ")rotate(" + angle + ")translate(" + radius + ")rotate(" + -offset  + ")";
         })
         .call(diagram, factors, (size - radius) - 1);
-  } else selection.append("circle").attr("r", Math.max(1, size));
+  } else {
+    selection.append("circle").attr("r", Math.max(1, size));
+  }
 }
 
 function shuffle(o){ 
