--- a/fd.html
+++ b/fd.html
@@ -73,7 +73,7 @@ function primeFactors(n) {
     factors.push(f = factor(n));
     n /= f;
   }
-  shuffle(factors);
+//  shuffle(factors);
   return factors;
 }
 
